feat(dockerfile): добавить контейнеризацию бэкенда
